--- a/Controls/Panel/FlowChartContainer.xaml
+++ b/Controls/Panel/FlowChartContainer.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:c="clr-namespace:MultiBranchTexter.Controls"
-             xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
-             Loaded="UserControl_Loaded">
+             xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel">
     <UserControl.DataContext>
         <vm:FCCViewModel/>
     </UserControl.DataContext>
