--- a/Resources/WindowResources.xaml
+++ b/Resources/WindowResources.xaml
@@ -256,6 +256,10 @@
                             Template="{StaticResource textButtonTemplate}"
                             Height="24" Margin="2"
                             HorizontalAlignment="Left" />
+                    <Button Content="检查更新" Command="{Binding CheckUpdateCommand}"
+                            Template="{StaticResource textButtonTemplate}"
+                            Height="24" Margin="2"
+                            HorizontalAlignment="Left" />
                 </StackPanel>
             </Grid>
             <Border x:Name="UpperBd" Grid.Row="2" IsHitTestVisible="False"
