--- a/Controls/TextTab/MBTabItem.xaml
+++ b/Controls/TextTab/MBTabItem.xaml
@@ -1,7 +1,6 @@
 ﻿<TabItem x:Class="MultiBranchTexter.Controls.MBTabItem"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-         xmlns:local="clr-namespace:MultiBranchTexter"
          xmlns:vm="clr-namespace:MultiBranchTexter.ViewModel"
          xmlns:c="clr-namespace:MultiBranchTexter.Controls"
          Loaded="TabItem_Loaded"
@@ -29,5 +28,8 @@
         </ScrollViewer>
         <!--下方信息栏-->
         <c:TabEnd x:Name="tabEnd" Grid.Row="1" HorizontalAlignment="Stretch"/>
+        <!--这是为了让tabend里的信息可以绑定-->
+        <TextBlock x:Name="copyWordCount" Text="{Binding CharCount}" Visibility="Collapsed"/>
+        <TextBlock x:Name="copyCharCount" Text="{Binding WordCount}" Visibility="Collapsed"/>
     </Grid>
 </TabItem>
