--- a/Resources/FCCResources.xaml
+++ b/Resources/FCCResources.xaml
@@ -7,7 +7,8 @@
     <ControlTemplate x:Key="searchBoxBtnTemp" TargetType="{x:Type Button}">
         <Border x:Name="MainBorder" Background="Transparent">
             <Grid>
-                <Path x:Name="CP" Stroke="White" StrokeThickness="2" Data="M4,10 L16,10 M12,5 16,10 L12,15"/>
+                <Path x:Name="CP" Stroke="{DynamicResource Foreground.ThemeBrush}"
+                      StrokeThickness="2" Data="M4,10 L16,10 M12,5 16,10 L12,15"/>
             </Grid>
         </Border>
         <ControlTemplate.Triggers>
@@ -21,6 +22,9 @@
                 </MultiTrigger.Conditions>
                 <Setter TargetName="MainBorder" Property="Background" Value="{DynamicResource RedBrush}"/>
             </MultiTrigger>
+            <Trigger Property="IsPressed" Value="True">
+                <Setter Property="Opacity" Value="0.8"/>
+            </Trigger>
             <Trigger Property="Name" Value="closeBtn">
                 <Setter TargetName="CP" Property="Data" Value="M5,5 L15,15 M5,15 L15,5"/>
             </Trigger>
