--- a/Controls/NodeSearchBox.xaml
+++ b/Controls/NodeSearchBox.xaml
@@ -1,10 +1,7 @@
 ﻿<UserControl x:Class="MultiBranchTexter.Controls.NodeSearchBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MultiBranchTexter.Controls"
-             Height="56" Width="160">
+             Height="48" Width="160">
     <Grid Background="{DynamicResource ThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -12,16 +9,18 @@
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="28"/>
+            <ColumnDefinition Width="24"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="搜索标题" Foreground="White" Margin="4" VerticalAlignment="Center"/>
-        <Button x:Name="closeBtn" Grid.Column="1" Margin="4" 
+        <TextBlock Text="搜索标题" Foreground="{DynamicResource Foreground.ThemeBrush}"
+                   Margin="4" VerticalAlignment="Center"/>
+        <Button x:Name="closeBtn" Grid.Column="1" Margin="2" 
                 Template="{DynamicResource searchBoxBtnTemp}"
                 Click="CloseBtn_Click"/>
-        <TextBox x:Name="findBox" Grid.Row="1" Grid.Column="0" Margin="3"
+        <TextBox x:Name="findBox" Grid.Row="1" Grid.Column="0" Margin="2"
+                 VerticalAlignment="Bottom" ToolTip="{x:Null}"
                  Background="{DynamicResource BaseBrush}"
                  TextChanged="FindBox_TextChanged"/>
-        <Button x:Name="nextBtn" Grid.Row="1" Grid.Column="1" Margin="4" 
+        <Button x:Name="nextBtn" Grid.Row="1" Grid.Column="1" Margin="2" 
                 Template="{DynamicResource searchBoxBtnTemp}"
                 Click="NextBtn_Click"/>
     </Grid>
